--- a/ci/patch.toml
+++ b/ci/patch.toml
@@ -8,6 +8,7 @@ tower-discover = { path = "tower-discover" }
 tower-filter = { path = "tower-filter" }
 tower-layer = { path = "tower-layer" }
 tower-limit = { path = "tower-limit" }
+tower-load = { path = "tower-load" }
 tower-load-shed = { path = "tower-load-shed" }
 tower-reconnect = { path = "tower-reconnect" }
 tower-retry = { path = "tower-retry" }
