--- a/tower-load/Cargo.toml
+++ b/tower-load/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tower-balance"
+name = "tower-load"
 # When releasing to crates.io:
 # - Remove path dependencies
 # - Update html_root_url.
@@ -28,9 +28,8 @@ indexmap = "1.0.2"
 log = "0.4.1"
 rand = "0.6.5"
 tokio-timer = "0.2.4"
-tower-discover = "0.1.0"
-tower-load = { version = "0.1.0", path = "../tower-load" }
 tower-service = "0.2.0"
+tower-discover = "0.1.0"
 tower-util = "0.1.0"
 
 [dev-dependencies]
