--- a/tower-pool/Cargo.toml
+++ b/tower-pool/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tower-balance"
+name = "tower-pool"
 # When releasing to crates.io:
 # - Remove path dependencies
 # - Update html_root_url.
@@ -14,9 +14,9 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/tower-rs/tower"
 homepage = "https://github.com/tower-rs/tower"
-documentation = "https://docs.rs/tower-balance/0.1.0"
+documentation = "https://docs.rs/tower-pool/0.1.0"
 description = """
-Balance load across a set of uniform services.
+A load-informed service-pooling layer.
 """
 categories = ["asynchronous", "network-programming"]
 edition = "2018"
