--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
   "tower-limit",
   "tower-load",
   "tower-load-shed",
-  "tower-pool",
+  #"tower-pool",
   "tower-reconnect",
   "tower-retry",
   "tower-service",
